--- a/.env
+++ b/.env
@@ -5,6 +5,10 @@ DB_PORT="17017"
 DB_NAME="dbweb3?authSource=admin"
 DB_USER="admin"
 DB_PASSWORD="admin"
+# Chache Database 
+DB_CACHE_HOST="host.docker.internal"
+DB_CACHE_PORT="16379"
+DB_CACHE_PASSWORD="admin"
 # JWT
 SECRET_KEY="$$$$#### SECRET_KEY ####$$$$"
 SECRET_KEY_LIFE_TIME=86400000 # 1d
