--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.8.1",
     "morgan": "^1.10.0",
     "prom-client": "^14.1.0",
+    "redis": "^4.5.1",
     "ts-node-dev": "^2.0.0",
     "web-push": "^3.5.0",
     "winston": "^3.8.2"
@@ -41,6 +42,7 @@
     "@types/mocha": "^10.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.8.4",
+    "@types/redis": "^4.0.11",
     "@types/web-push": "^3.3.2",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
