Set DB_CACHE_ACTIVE true

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_NAME="dbweb3?authSource=admin"
 DB_USER="admin"
 DB_PASSWORD="admin"
 # Chache Database 
-DB_CACHE_ACTIVE="false"
+DB_CACHE_ACTIVE="true"
 DB_CACHE_HOST="host.docker.internal"
 DB_CACHE_PORT="16379"
 DB_CACHE_PASSWORD="admin"
