Add Send Email lib

--- a/.env
+++ b/.env
@@ -19,3 +19,9 @@ REFRESH_SECRET_KEY_LIFE_TIME=1209600000 # 14d
 SITE_PATH="http://localhost:3000"
 # Upload
 UPLOAD_FOLDER="images-upload"
+# Mail
+WAIT_TIME_FOR_CODE=10
+MAIL_HOST="smtp.gmail.com"
+MAIL_PORT=587
+MAIL_FROM="your-email@gmail.com"
+MAIL_PASSWORD="Your Google App Password"
