--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "prom-client": "^14.1.0",
     "redis": "^4.5.1",
     "ts-node-dev": "^2.0.0",
@@ -41,6 +42,7 @@
     "@types/mocha": "^10.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/redis": "^4.0.11",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
