Add SendMobile lib

--- a/.env
+++ b/.env
@@ -19,9 +19,16 @@ REFRESH_SECRET_KEY_LIFE_TIME=1209600000 # 14d
 SITE_PATH="http://localhost:3000"
 # Upload
 UPLOAD_FOLDER="images-upload"
-# Mail
+#
 WAIT_TIME_FOR_CODE=10
+# Mail
 MAIL_HOST="smtp.gmail.com"
 MAIL_PORT=587
 MAIL_FROM="your-email@gmail.com"
 MAIL_PASSWORD="Your Google App Password"
+# Mobile
+MOBILE_LINK="https://sms.com"
+MOBILE_FROM="0123"
+MOBILE_KEY="123#abc"
+MOBILE_PATTERN_CODE="pattern"
+MOBILE_VAR="key1"
