Add Push Notification

--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ REFRESH_SECRET_KEY_LIFE_TIME=1209600000 # 14d
 SITE_PATH="http://localhost:3000"
 # Upload
 UPLOAD_FOLDER="images-upload"
+# Push Notification
+PRIVATE_KEY=""
 #
 WAIT_TIME_FOR_CODE=10
 # Mail
