--- a/.env
+++ b/.env
@@ -20,6 +20,8 @@ REFRESH_SECRET_KEY_LIFE_TIME=1209600000 # 14d
 SITE_PATH="http://localhost:3000"
 # Upload
 UPLOAD_FOLDER="images-upload"
+# Game
+MAXIMUM_CARD=8
 # Push Notification
 PRIVATE_KEY=""
 #
