--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SERVER_PATH="F:/Github/Footballiga/server/public"
+SERVER_PATH="http://localhost:4000"
 SERVER_PORT=4000
 # Database connection 
 DB_HOST="host.docker.internal"
